syntax = "proto3";

package proto;

service Jjogaegi {
    rpc Run(RunRequest) returns (RunResponse) {}
    rpc RunStream(stream RunRequest) returns (stream RunResponse) {}
}

message RunOptions {
    string parser = 1;
    string formatter = 2;
}

message RunRequest {
    RunOptions options = 1;
    bytes input = 2;
}

message RunResponse {
    bytes output = 1;
}